[gd_scene load_steps=5 format=3 uid="uid://qywv2qtxp2k4"]

[ext_resource type="Script" path="res://Script/Chunk.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scene/PrototypeChunkScene/PrototypeChunk_A0.tscn" id="2"]
[ext_resource type="Script" path="res://Scene/ScoreUI.gd" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(64, 256)

[node name="MainWorld" type="Node2D"]

[node name="Chunk" type="Node2D" parent="."]
script = ExtResource("1")

[node name="loadChunk" type="Area2D" parent="Chunk"]
position = Vector2(448, 0)
collision_layer = 32768
collision_mask = 32768

[node name="Area" type="CollisionShape2D" parent="Chunk/loadChunk"]
position = Vector2(32, 128)
shape = SubResource("1")

[node name="unloadChunk" type="Area2D" parent="Chunk"]
collision_layer = 32768
collision_mask = 32768

[node name="Area" type="CollisionShape2D" parent="Chunk/unloadChunk"]
position = Vector2(-96, 128)
shape = SubResource("1")

[node name="loadedChunk" type="Node2D" parent="Chunk"]

[node name="PrototypeChunk_A0" parent="Chunk/loadedChunk" instance=ExtResource("2")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
text = "000"
script = ExtResource("4")

[connection signal="area_exited" from="Chunk/loadChunk" to="Chunk" method="on_loadChunk_leave"]
[connection signal="area_exited" from="Chunk/unloadChunk" to="Chunk" method="on_unloadChunk_leave"]
